fix body background in dark mode

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,6 +16,12 @@ body {
   line-height: 1.35;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: none;
+  }
+}
+
 main {
   display: block;
   overflow: hidden;
