--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -46,8 +46,6 @@
     --trans-white-9: rgba(0, 0, 0, 0.9);
     --dark: #eee;
     --trans-dark: rgb(209, 208, 208, 0.7);
-    
-    --texture-paper: ;
   }
 }
 
